--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -130,7 +130,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>formbuilder</artifactId>
-            <version>2.0.3</version>
+            <version>2.0.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
