--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -343,7 +343,7 @@
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acmespaceelektra</artifactId>
-            <version>2.0.2</version>
+            <version>2.0.3-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
