Adjusted project info
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1294 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/jahia-packages-parent/pom.xml
+++ b/jahia-packages-parent/pom.xml
@@ -8,9 +8,9 @@
   </parent>
   <groupId>org.jahia.packages</groupId>
   <artifactId>jahia-packages-parent</artifactId>
-  <name>Enterprise Distribution - Workspace Factory</name>
+  <name>Jahia Packages Parent</name>
   <packaging>pom</packaging>
-  <description>Parent project to package all Factories components.</description>
+  <description>Parent project to package all Factory components</description>
   <build>
     <pluginManagement>
       <plugins>
