Attach the package assembly to the build to be able to push it to Nexus (protected repositories)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1295 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/jahia-packages-parent/pom.xml
+++ b/jahia-packages-parent/pom.xml
@@ -53,7 +53,7 @@
                 <descriptors>
                   <descriptor>${jahia.package.assembly.file}</descriptor>
                 </descriptors>
-                <attach>false</attach>
+                <attach>true</attach>
                 <finalName>${jahia.final.package.name}-${project.version}</finalName>
                 <appendAssemblyId>false</appendAssemblyId>
                 <archive>
