--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -112,7 +112,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>docConverter</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
