--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -220,7 +220,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>teasers</artifactId>
-            <version>2.0.2-SNAPSHOT</version>
+            <version>2.0.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
