--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -251,6 +251,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>tools</artifactId>
+            <version>7.1.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>translation</artifactId>
             <version>7.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
