--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -241,38 +241,15 @@
                                 <configuration>
                                     <target>
                                         <path id="launch4j_classpath">
-                                            <pathelement location="${project.build.directory}/artifacts/launch4j/launch4j.jar"/>
+                                            <pathelement location="${project.build.directory}/artifacts/launch4j/launch4j.jar" />
                                         </path>
-                                        <chmod dir="${project.build.directory}/artifacts/launch4j/bin" perm="755" includes="**"/>
-                                        <taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpathref="launch4j_classpath"/>
+                                        <chmod dir="${project.build.directory}/artifacts/launch4j/bin" perm="755" includes="**" />
+                                        <taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpathref="launch4j_classpath" />
                                         <launch4j>
-                                            <config
-                                                outfile="${project.build.directory}/${installer.filename}.exe"
-                                                jarPath="${project.build.directory}/${installer.filename}.jar"
-                                                dontWrapJar="false"
-                                                headerType="gui"
-                                                priority="normal"
-                                                downloadUrl="http://java.com/download"
-                                                supportUrl="http://www.jahia.com"
-                                                stayAlive="false"
-                                                icon="${project.build.directory}/images/jahia.ico">
-                                                <jre minVersion="1.7.0"/>
-                                                <splash
-                                                    file="${project.build.directory}/images/splash.bmp"
-                                                    waitForWindow="true"
-                                                    timeout="60"
-                                                    timeoutErr="true"/>
-                                                <versionInfo
-                                                    fileVersion="7.1.0.0"
-                                                    txtFileVersion="${product.version}"
-                                                    fileDescription="${product.name} - Community Distribution - Windows Installer"
-                                                    copyright="Copyright 2002-${year} ${jahia.manifest.vendor.name}"
-                                                    productVersion="7.1.0.0"
-                                                    txtProductVersion="${product.version}"
-                                                    productName="${product.name} - Community Distribution"
-                                                    companyName="${jahia.manifest.vendor.name}"
-                                                    internalName="DigitalFactory-CommunityDistribution"
-                                                    originalFilename="DigitalFactory-CommunityDistribution.exe"/>
+                                            <config outfile="${project.build.directory}/${installer.filename}.exe" jarPath="${project.build.directory}/${installer.filename}.jar" dontWrapJar="false" headerType="gui" priority="normal" downloadUrl="http://java.com/download" supportUrl="http://www.jahia.com" stayAlive="false" icon="${project.build.directory}/images/jahia.ico">
+                                                <jre minVersion="1.7.0" />
+                                                <splash file="${project.build.directory}/images/splash.bmp" waitForWindow="true" timeout="60" timeoutErr="true" />
+                                                <versionInfo fileVersion="7.1.0.0" txtFileVersion="${product.version}" fileDescription="${product.name} - Community Distribution - Windows Installer" copyright="Copyright 2002-${year} ${jahia.manifest.vendor.name}" productVersion="7.1.0.0" txtProductVersion="${product.version}" productName="${product.name} - Community Distribution" companyName="${jahia.manifest.vendor.name}" internalName="DigitalFactory-CommunityDistribution" originalFilename="DigitalFactory-CommunityDistribution.exe" />
                                             </config>
                                         </launch4j>
                                     </target>
@@ -352,8 +329,7 @@
                                     <target>
                                         <chmod file="${project.build.directory}/sign4j/${sign4j.executable}" perm="ugo+rx" />
                                         <exec executable="${project.build.directory}/sign4j/${sign4j.executable}">
-                                            <arg
-                                                line="java -jar ${project.build.directory}/artifacts/jsign/jsign.jar --storetype PKCS12 --keystore ${jahia.sign.keystore} --storepass ${jahia.sign.storepass} --alias jahia --tsaurl http://tsa.starfieldtech.com/ ${project.build.directory}/${installer.filename}.exe" />
+                                            <arg line="java -jar ${project.build.directory}/artifacts/jsign/jsign.jar --storetype PKCS12 --keystore ${jahia.sign.keystore} --storepass ${jahia.sign.storepass} --alias jahia --tsaurl http://tsa.starfieldtech.com/ ${project.build.directory}/${installer.filename}.exe" />
                                         </exec>
                                     </target>
                                 </configuration>
