--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -173,7 +173,7 @@
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.1.0</version>
+            <version>2.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
