QABACKLOG-745 - switched to SNAPSHOTs for LDAP and external-provider-user-groups module
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1381 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -141,7 +141,7 @@
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.0.0</version>
+           <version>1.0.1-SNAPSHOT</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
