--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -283,7 +283,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
