--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -141,6 +141,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>jcr-webdav</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>job</artifactId>
             <version>2.0.1</version>
             <scope>runtime</scope>
