QA-7666 : use snapshot version for bootstrap navigation menu
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1402 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -268,7 +268,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap-components</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
