Removed "Launch Thread Dump Analyzer" action from System health / Memory and thread dumps and tools area ( QA-7740 )
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1405 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -214,7 +214,7 @@
         </dependency><dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>7.1.0</version>
+            <version>7.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
