--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -100,7 +100,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>calendar</artifactId>
-            <version>2.0.2-SNAPSHOT</version>
+            <version>2.0.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -202,7 +202,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>sitemap</artifactId>
-            <version>2.0.2-SNAPSHOT</version>
+            <version>2.0.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
