--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -237,7 +237,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.1.0</version>
+            <version>7.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
