set external-provider to SNAPSHOT version
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1432 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -129,7 +129,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -147,7 +147,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
