Use version 4.6.1 for jahia-installer-lib project to fix issue with the MySQL and Community Installer ( QA-7794 )
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/tags/JAHIA_7_1_0_0@1435 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>org.jahia.configuration</groupId>
             <artifactId>jahia-installer-lib</artifactId>
-            <version>${jahia.installers.version}</version>
+            <version>4.6.1</version>
         </dependency>
 
         <dependency>
@@ -481,6 +481,15 @@
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.osgi</groupId>
+                                    <artifactId>org.osgi.compendium</artifactId>
+                                    <version>${osgi.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/artifacts/jahia-war/WEB-INF/lib</outputDirectory>
+									<destFileName>org.osgi.compendium-${osgi.version}.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
                             <stripVersion>true</stripVersion>
