--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -196,7 +196,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rss</artifactId>
-            <version>2.0.2</version>
+            <version>2.0.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
