--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -274,7 +274,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>2.0.3-SNAPSHOT</version>
+            <version>2.0.2</version>
             <scope>runtime</scope>
         </dependency>
 		<!-- end of Jahia Forge Modules -->
