--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -142,7 +142,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcr-webdav</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
