--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
     <parent>
         <groupId>org.jahia</groupId>
         <artifactId>jahia-parent</artifactId>
-        <version>7.1.0.1</version>
+        <version>7.1.0.2-SNAPSHOT</version>
         <relativePath>../jahia/jahia-parent/pom.xml</relativePath>
     </parent>
     
