--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -213,7 +213,7 @@
         </dependency><dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>7.1.1</version>
+            <version>7.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
