--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -141,7 +141,7 @@
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.0.1</version>
+           <version>1.0.2-SNAPSHOT</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
@@ -172,7 +172,7 @@
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.2.0</version>
+            <version>2.2.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -196,7 +196,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rolesmanager</artifactId>
-            <version>7.1.1</version>
+            <version>7.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -219,7 +219,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.1.1</version>
+            <version>7.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency><dependency>
             <groupId>org.jahia.modules</groupId>
@@ -254,7 +254,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
