--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -189,6 +189,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>module-manager</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>profile</artifactId>
             <version>7.1.0</version>
             <scope>runtime</scope>
