--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -297,7 +297,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>sample-bootstrap-templates</artifactId>
-            <version>3.0.1</version>
+            <version>3.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
