switch sample-bootstrap-templates and bootstrap-acme-space-templates to latest SNAPSHOT (skip-jahia-merge)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-7-1-X-X-BRANCH@1491 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -297,13 +297,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>sample-bootstrap-templates</artifactId>
-            <version>3.0.1</version>
+            <version>3.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap-acme-space-templates</artifactId>
-            <version>3.0.1</version>
+            <version>3.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         
