--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -289,7 +289,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.0.1</version>
+            <version>3.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
