--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -250,7 +250,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userregistration</artifactId>
-            <version>2.0..4-SNAPSHOT</version>
+            <version>2.0.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
