BACKLOG-6080 : Changes in pom.xml files
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1516 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -82,7 +82,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <product.name>Digital Factory</product.name>
+        <product.name>Digital Experience Manager</product.name>
         <product.version>${project.version}</product.version>
         <product.fullname>DigitalFactory-CommunityDistribution-${product.version}</product.fullname>
         <staging.dir>${project.build.directory}/izpack</staging.dir>
