BACKLOG-6085 - Formatting fixed (skip-jahia-merge)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-7-1-X-X-BRANCH@1577 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -194,7 +194,8 @@
             <artifactId>siteSettings</artifactId>
             <version>7.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
-        </dependency><dependency>
+        </dependency>
+        <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>skins</artifactId>
             <version>7.1.1-SNAPSHOT</version>
@@ -235,12 +236,14 @@
             <artifactId>translation</artifactId>
             <version>7.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
-        </dependency><dependency>
+        </dependency>
+        <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
             <version>7.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
-        </dependency><dependency>
+        </dependency>
+        <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>visibility</artifactId>
             <version>7.1.1-SNAPSHOT</version>
