--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -188,7 +188,8 @@
             <artifactId>seo</artifactId>
             <version>7.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
-        </dependency><dependency>
+        </dependency>
+        <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
             <version>8.0.0-SNAPSHOT</version>
@@ -199,7 +200,8 @@
             <artifactId>siteSettings</artifactId>
             <version>7.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
-        </dependency><dependency>
+        </dependency>
+        <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>skins</artifactId>
             <version>7.1.1-SNAPSHOT</version>
@@ -240,12 +242,14 @@
             <artifactId>translation</artifactId>
             <version>7.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
-        </dependency><dependency>
+        </dependency>
+        <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
             <version>7.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
-        </dependency><dependency>
+        </dependency>
+        <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>visibility</artifactId>
             <version>7.1.1-SNAPSHOT</version>
