BACKLOG-6187 : moved karaf/data and karaf/etc to digital-factory-data
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1581 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -381,9 +381,9 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jahia.server</groupId>
-                                    <artifactId>jahia-data</artifactId>
+                                    <artifactId>jahia-war</artifactId>
                                     <version>${project.version}</version>
-                                    <classifier>package</classifier>
+                                    <classifier>data-package</classifier>
                                     <type>zip</type>
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/artifacts/jahia-data</outputDirectory>
