--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -321,7 +321,7 @@
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acmespaceelektra</artifactId>
-            <version>2.0.4</version>
+            <version>2.0.5-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
