--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -102,7 +102,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>formbuilder</artifactId>
-            <version>2.0.6</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
