QA-8318	: Unrestricted URL access to admin interfaces exposed by tomcat
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1643 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -367,7 +367,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
                                     <excludes>
-                                        **/temp/safeToDelete.tmp,**/webapps/examples/**,**/webapps/docs/**,**/webapps/ROOT/**
+                                        **/temp/safeToDelete.tmp,**/webapps/examples/**,**/webapps/docs/**,**/webapps/ROOT/**,**/webapps/manager/**,**/webapps/host-manager/**
                                     </excludes>
                                 </artifactItem>
                                 <artifactItem>
