QA-8620	: LDAP cache expiration is hardcoded (commit by achaabni merged from jahia_pack/branches/JAHIA-7-1-X-X-BRANCH revision 1682)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1683 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -274,7 +274,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.0.3</version>
+            <version>3.0.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
