QA-8691 increase external-provider-modules version [skip-jahia-merge]
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-7-1-X-X-BRANCH@1708 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.0.4</version>
+            <version>3.0.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
