--- a/jahia-packages-parent/pom.xml
+++ b/jahia-packages-parent/pom.xml
@@ -28,7 +28,7 @@
         GNU General Public License for more details.
 
         You should have received a copy of the GNU General Public License
-        along with this program. If not, see <http://www.gnu.org/licenses/>.
+        along with this program. If not, see <http://www.gnu.org/licenses />.
 
 
         2/ JSEL - Commercial and Supported Versions of the program
@@ -49,7 +49,7 @@
   <parent>
       <groupId>org.jahia.server</groupId>
       <artifactId>jahia-pack-root</artifactId>
-      <version>7.2.0.0-SNAPSHOT</version>
+      <version>7.2.0.0-BACKLOG5637-SNAPSHOT</version>
   </parent>
   <groupId>org.jahia.packages</groupId>
   <artifactId>jahia-packages-parent</artifactId>
